erDiagram
    CATEGORIES ||--o{ PRODUCTS : "groups"
    CUSTOMERS ||--o{ ORDERS : "places"
    ORDERS ||--o{ ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ ORDER_ITEMS : "appears in"

    CATEGORIES {
        int category_id PK
        string category_name
    }

    CUSTOMERS {
        int customer_id PK
        string first_name
        string last_name
        string email
        string city
        string state
        string country
        date signup_date
    }

    PRODUCTS {
        int product_id PK
        string product_name
        int category_id FK
        decimal unit_price
        int stock_quantity
    }

    ORDERS {
        int order_id PK
        int customer_id FK
        date order_date
        string status
    }

    ORDER_ITEMS {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal unit_price
    }
